--- a/css/style.css
+++ b/css/style.css
@@ -103,24 +103,12 @@ Slide In Panel - by CodyHouse.co
 }
 
 .cd-panel__header {
-  position: fixed;
-  width: 90%;
   height: 50px;
   line-height: 50px;
   background: rgba(255, 255, 255, 0.96);
-  z-index: 2;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08);
-          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08);
-  -webkit-transition: -webkit-transform 0.3s 0s;
-  transition: -webkit-transform 0.3s 0s;
-  transition: transform 0.3s 0s;
-  transition: transform 0.3s 0s, -webkit-transform 0.3s 0s;
-  -webkit-transform: translateY(-50px);
-      -ms-transform: translateY(-50px);
-          transform: translateY(-50px);
 }
 
-.cd-panel__header h1 {
+.cd-panel__header h2 {
   color: #89ba2c;
   padding-left: 5%;
 }
@@ -318,11 +306,11 @@ Slide In Panel - by CodyHouse.co
 
 .cd-panel__content {
   position: absolute;
-  top: 0;
+  top: 50px;
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 70px 5%;
+  padding: 20px 5%;
   overflow: auto;
   /* smooth scrolling on touch devices */
   -webkit-overflow-scrolling: touch;
